--- a/css/index.css
+++ b/css/index.css
@@ -86,16 +86,16 @@
   cursor: pointer;
 }
 .menu {
-  display: none;
   position: fixed;
   top: 75px;
-  left: 0;
+  left: -350px;
   width: 350px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81C784;
   border: 1px solid #004D40;
   border-left: none;
+  transition: left 0.5s ease-in;
   border-bottom: none;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
@@ -107,7 +107,7 @@
   text-align: center;
 }
 .menu--open {
-  display: block;
+  left: 0;
 }
 html,
 body {
