--- a/Article/Article.less
+++ b/Article/Article.less
@@ -1,5 +1,8 @@
 .articles {
-  margin-top: 95px;
+  padding-top: 95px;
+  display: block;
+  min-height: 100%;
+  height: 100%;
 }
 .article {
   margin: 20px 10%;
@@ -8,7 +11,7 @@
   border-radius: 10px;
   background-color: white;
   position: relative;
-  height: 60px;
+  height: 85px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
 
