--- a/LESS/index.less
+++ b/LESS/index.less
@@ -7,9 +7,15 @@
 @import '../Article/Article.less';
 @import '../Menu/Menu.less';
 
+*{
+  box-sizing: border-box;
+}
+
 html, body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto';
   background-color: #fffef7;
+  min-height: 100%;
+  height: 100%;
 }
