--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,10 @@
   font-size: 48px;
 }
 .articles {
-  margin-top: 95px;
+  padding-top: 95px;
+  display: block;
+  min-height: 100%;
+  height: 100%;
 }
 .article {
   margin: 20px 10%;
@@ -45,7 +48,7 @@
   border-radius: 10px;
   background-color: white;
   position: relative;
-  height: 60px;
+  height: 85px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
 }
@@ -109,10 +112,15 @@
 .menu--open {
   left: 0;
 }
+* {
+  box-sizing: border-box;
+}
 html,
 body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto';
   background-color: #fffef7;
+  min-height: 100%;
+  height: 100%;
 }
